Removed redundant css, fixed alignment issue, fixed unit size for small on index

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ header{
   overflow: hidden;
 }
 
-@media only screen and (min-width: 24em){
+@media only screen and (min-width: 25em){
 	  nav li{
 	    display: inline-block;
 	  }
@@ -71,11 +71,7 @@ header{
 }
 
 @media only screen and (min-width: 38em){
-	h3, .align-left{
+	h3, .align-left, nav ol{
 		text-align: left;
 	}
-}
-
-@media only screen and (min-width: 38em){
-
 }
